--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="O8m-hz-T20">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,233 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="recording" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ow7-X9-PYK">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.68402478448275861" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzd-wv-qQj">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stop"/>
+                                <connections>
+                                    <action selector="stopAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PV5-8o-huM"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wzt-Tf-kUe">
+                                <rect key="frame" x="20" y="20" width="99" height="30"/>
+                                <state key="normal" image="microphone"/>
+                                <connections>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J4M-ff-nNv"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.68402478450000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="wzt-Tf-kUe" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="A1c-Zz-5tr"/>
+                            <constraint firstItem="Ow7-X9-PYK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GWs-xa-i6f"/>
+                            <constraint firstItem="hzd-wv-qQj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aaQ-mX-6gm"/>
+                            <constraint firstItem="wzt-Tf-kUe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="amQ-cb-ML7"/>
+                            <constraint firstItem="Ow7-X9-PYK" firstAttribute="top" secondItem="wzt-Tf-kUe" secondAttribute="bottom" constant="43" id="rh4-rM-SOS"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hzd-wv-qQj" secondAttribute="bottom" constant="100" id="yf0-lb-1Kl"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="Ow7-X9-PYK"/>
+                                <exclude reference="hzd-wv-qQj"/>
+                                <exclude reference="wzt-Tf-kUe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="A1c-Zz-5tr"/>
+                                <exclude reference="amQ-cb-ML7"/>
+                                <exclude reference="GWs-xa-i6f"/>
+                                <exclude reference="rh4-rM-SOS"/>
+                                <exclude reference="aaQ-mX-6gm"/>
+                                <exclude reference="yf0-lb-1Kl"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="Ow7-X9-PYK"/>
+                                <include reference="hzd-wv-qQj"/>
+                                <include reference="wzt-Tf-kUe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="A1c-Zz-5tr"/>
+                                <include reference="amQ-cb-ML7"/>
+                                <include reference="GWs-xa-i6f"/>
+                                <include reference="rh4-rM-SOS"/>
+                                <include reference="aaQ-mX-6gm"/>
+                                <include reference="yf0-lb-1Kl"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" title="Record" id="ChK-Pv-BgQ"/>
+                    <connections>
+                        <outlet property="recordButton" destination="wzt-Tf-kUe" id="tcB-GO-rqH"/>
+                        <outlet property="recordingLabel" destination="Ow7-X9-PYK" id="1Zq-yR-Dqg"/>
+                        <outlet property="stopButton" destination="hzd-wv-qQj" id="O6h-gm-AA8"/>
+                        <segue destination="0Jn-Cf-zvy" kind="show" identifier="stopRecording" id="PJK-DO-Mbb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1335" y="266.25"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="Box-VD-m8q">
+            <objects>
+                <viewController id="0Jn-Cf-zvy" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xgB-q4-z54"/>
+                        <viewControllerLayoutGuide type="bottom" id="axo-yZ-9ng"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bCU-Mz-dKa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyd-cM-3AH" userLabel="Slow Button">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="slow"/>
+                                <connections>
+                                    <action selector="PlaySlowAudio:" destination="0Jn-Cf-zvy" eventType="touchUpInside" id="BAm-AX-Mdt"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bfo-zX-11k" userLabel="Fast Button">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="fast"/>
+                                <connections>
+                                    <action selector="PlayFastAudio:" destination="0Jn-Cf-zvy" eventType="touchUpInside" id="ysW-Uz-B0y"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A0c-xV-t7d" userLabel="Stop Button">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stop"/>
+                                <connections>
+                                    <action selector="StopPlayingAudio:" destination="0Jn-Cf-zvy" eventType="touchUpInside" id="obH-G3-gim"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Al5-St-tKH">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="chipmunk"/>
+                                <connections>
+                                    <action selector="PlayChipmunkAudio:" destination="0Jn-Cf-zvy" eventType="touchUpInside" id="I50-Ft-ELX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJC-9A-BOh">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="darthvader"/>
+                                <connections>
+                                    <action selector="PlayDarthVaderAudio:" destination="0Jn-Cf-zvy" eventType="touchUpInside" id="qBL-gL-zlU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.68402478450000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="MJC-9A-BOh" firstAttribute="top" secondItem="Bfo-zX-11k" secondAttribute="bottom" constant="50" id="1XU-pD-CgW"/>
+                            <constraint firstItem="cyd-cM-3AH" firstAttribute="leading" secondItem="bCU-Mz-dKa" secondAttribute="leadingMargin" constant="25" id="EmA-ql-5lR"/>
+                            <constraint firstItem="cyd-cM-3AH" firstAttribute="top" secondItem="xgB-q4-z54" secondAttribute="bottom" constant="50" id="FMK-3E-3q3"/>
+                            <constraint firstItem="Bfo-zX-11k" firstAttribute="top" secondItem="xgB-q4-z54" secondAttribute="bottom" constant="50" id="ILe-bf-lEb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MJC-9A-BOh" secondAttribute="trailing" constant="25" id="OeA-Ft-st6"/>
+                            <constraint firstItem="axo-yZ-9ng" firstAttribute="top" secondItem="A0c-xV-t7d" secondAttribute="bottom" constant="100" id="ahT-hm-Kwb"/>
+                            <constraint firstItem="Al5-St-tKH" firstAttribute="leading" secondItem="bCU-Mz-dKa" secondAttribute="leadingMargin" constant="25" id="d8L-oP-nDc"/>
+                            <constraint firstItem="Al5-St-tKH" firstAttribute="top" secondItem="cyd-cM-3AH" secondAttribute="bottom" constant="50" id="fPM-VA-btk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Bfo-zX-11k" secondAttribute="trailing" constant="25" id="roY-GX-JgB"/>
+                            <constraint firstItem="A0c-xV-t7d" firstAttribute="centerX" secondItem="bCU-Mz-dKa" secondAttribute="centerX" id="tHW-Jo-mCe"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="cyd-cM-3AH"/>
+                                <exclude reference="Bfo-zX-11k"/>
+                                <exclude reference="A0c-xV-t7d"/>
+                                <exclude reference="Al5-St-tKH"/>
+                                <exclude reference="MJC-9A-BOh"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="EmA-ql-5lR"/>
+                                <exclude reference="FMK-3E-3q3"/>
+                                <exclude reference="d8L-oP-nDc"/>
+                                <exclude reference="fPM-VA-btk"/>
+                                <exclude reference="ILe-bf-lEb"/>
+                                <exclude reference="roY-GX-JgB"/>
+                                <exclude reference="1XU-pD-CgW"/>
+                                <exclude reference="OeA-Ft-st6"/>
+                                <exclude reference="tHW-Jo-mCe"/>
+                                <exclude reference="ahT-hm-Kwb"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="cyd-cM-3AH"/>
+                                <include reference="Bfo-zX-11k"/>
+                                <include reference="A0c-xV-t7d"/>
+                                <include reference="Al5-St-tKH"/>
+                                <include reference="MJC-9A-BOh"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="EmA-ql-5lR"/>
+                                <include reference="FMK-3E-3q3"/>
+                                <include reference="d8L-oP-nDc"/>
+                                <include reference="fPM-VA-btk"/>
+                                <include reference="ILe-bf-lEb"/>
+                                <include reference="roY-GX-JgB"/>
+                                <include reference="1XU-pD-CgW"/>
+                                <include reference="OeA-Ft-st6"/>
+                                <include reference="tHW-Jo-mCe"/>
+                                <include reference="ahT-hm-Kwb"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="txK-NV-HI3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2101.5" y="266.25"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="8zd-60-uyd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O8m-hz-T20" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LW4-sm-3kE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="5Hm-dT-1ZM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Euy-Fx-uc5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="394.5" y="266.25"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Oho-mi-Khn">
+            <objects>
+                <viewController id="2kJ-l6-6fx" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NIK-u3-zzU"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z3K-Nc-7Wv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VcL-vh-dGW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oPM-kK-gOe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="chipmunk" width="100" height="100"/>
+        <image name="darthvader" width="100" height="100"/>
+        <image name="fast" width="100" height="100"/>
+        <image name="microphone" width="100" height="100"/>
+        <image name="slow" width="100" height="100"/>
+        <image name="stop" width="50" height="50"/>
+    </resources>
 </document>
